# five-in-a-row

./: .gitignore  CMakeLists.txt  CROSS_PLATFORM.md  README.md  build.bat  build.sh  diagnostics.py  install.py  play_gomoku.bat  play_gomoku.py  play_gomoku.sh  setup.py
resources/: settings.json
src/backend/: gomoku_engine.cpp  gomoku_engine.h  gomoku_wrapper.cpp  gomoku_wrapper.h
src/frontend/: create_icon.py  generate_sounds.py  gomoku_app.py  setup_resources.py  test_backend.py
src/resources/: settings.json
